--- a/LeBaluchon/View/Base.lproj/Main.storyboard
+++ b/LeBaluchon/View/Base.lproj/Main.storyboard
@@ -148,7 +148,7 @@
         <!--Traduction-->
         <scene sceneID="fXH-oP-Ebq">
             <objects>
-                <viewController title="Traduction" id="LGh-By-4xj" sceneMemberID="viewController">
+                <viewController title="Traduction" id="LGh-By-4xj" customClass="TranslateController" customModule="LeBaluchon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Y0I-Jp-XIo">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -160,12 +160,24 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbO-Lt-PNy">
+                                <rect key="frame" x="175" y="431" width="65" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="TEST"/>
+                                <connections>
+                                    <action selector="translateButton:" destination="LGh-By-4xj" eventType="touchUpInside" id="CqL-cz-P5X"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="w9y-OP-dHP"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <color key="tintColor" systemColor="systemPinkColor"/>
                         <constraints>
+                            <constraint firstItem="xbO-Lt-PNy" firstAttribute="top" secondItem="BLi-Cn-CAl" secondAttribute="bottom" constant="330" id="IJ8-xg-1QJ"/>
+                            <constraint firstItem="w9y-OP-dHP" firstAttribute="bottom" secondItem="xbO-Lt-PNy" secondAttribute="bottom" constant="347" id="NZG-4h-9pn"/>
                             <constraint firstItem="BLi-Cn-CAl" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="OqK-eP-WQU"/>
+                            <constraint firstItem="xbO-Lt-PNy" firstAttribute="leading" secondItem="w9y-OP-dHP" secondAttribute="leading" constant="175" id="bkM-CV-EwZ"/>
+                            <constraint firstItem="w9y-OP-dHP" firstAttribute="trailing" secondItem="xbO-Lt-PNy" secondAttribute="trailing" constant="174" id="eBo-HM-D3k"/>
                             <constraint firstItem="BLi-Cn-CAl" firstAttribute="top" secondItem="w9y-OP-dHP" secondAttribute="top" constant="10" id="xVD-hW-cCf"/>
                         </constraints>
                     </view>
