Translation working, need to improve the design

--- a/LeBaluchon/View/Base.lproj/Main.storyboard
+++ b/LeBaluchon/View/Base.lproj/Main.storyboard
@@ -161,20 +161,38 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xbO-Lt-PNy">
-                                <rect key="frame" x="174.66666666666666" y="430.66666666666669" width="65" height="35"/>
+                                <rect key="frame" x="174.66666666666666" y="430.66666666666669" width="65" height="34.666666666666686"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="TEST"/>
                                 <connections>
                                     <action selector="translateButton:" destination="LGh-By-4xj" eventType="touchUpInside" id="CqL-cz-P5X"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write a translation here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HVc-SU-8Bp">
+                                <rect key="frame" x="105.00000000000001" y="364" width="204.33333333333337" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Afd-xX-rsd">
+                                <rect key="frame" x="87" y="502" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="w9y-OP-dHP"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <color key="tintColor" systemColor="systemPinkColor"/>
                         <constraints>
+                            <constraint firstItem="w9y-OP-dHP" firstAttribute="bottom" secondItem="Afd-xX-rsd" secondAttribute="bottom" constant="183" id="2Jj-za-iHO"/>
+                            <constraint firstItem="w9y-OP-dHP" firstAttribute="trailing" secondItem="Afd-xX-rsd" secondAttribute="trailing" constant="87" id="AQs-0h-vw9"/>
+                            <constraint firstItem="Afd-xX-rsd" firstAttribute="leading" secondItem="w9y-OP-dHP" secondAttribute="leading" constant="87" id="Fbe-YS-oJA"/>
                             <constraint firstItem="BLi-Cn-CAl" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="OqK-eP-WQU"/>
+                            <constraint firstItem="HVc-SU-8Bp" firstAttribute="top" secondItem="Y0I-Jp-XIo" secondAttribute="top" constant="364" id="YVN-jW-T72"/>
+                            <constraint firstItem="HVc-SU-8Bp" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="j2C-Bj-7hR"/>
                             <constraint firstItem="xbO-Lt-PNy" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="kBo-mu-wHD"/>
+                            <constraint firstItem="Afd-xX-rsd" firstAttribute="top" secondItem="xbO-Lt-PNy" secondAttribute="bottom" constant="36.670000000000002" id="mIm-8o-1WK"/>
                             <constraint firstItem="xbO-Lt-PNy" firstAttribute="centerY" secondItem="Y0I-Jp-XIo" secondAttribute="centerY" id="wsZ-W3-yHo"/>
                             <constraint firstItem="BLi-Cn-CAl" firstAttribute="top" secondItem="w9y-OP-dHP" secondAttribute="top" constant="10" id="xVD-hW-cCf"/>
                         </constraints>
@@ -183,10 +201,14 @@
                         <imageReference key="image" image="character.bubble.fill.ja" catalog="system" symbolScale="large"/>
                         <color key="badgeColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="textTranslatedTextView" destination="Afd-xX-rsd" id="G40-KY-mA2"/>
+                        <outlet property="translationTextField" destination="HVc-SU-8Bp" id="Gw7-KQ-nGC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="93Q-WK-grF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-334" y="6"/>
+            <point key="canvasLocation" x="-334.78260869565219" y="5.3571428571428568"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="oDa-VQ-4X4">
@@ -250,6 +272,12 @@
         <image name="character.bubble.fill.ja" catalog="system" width="128" height="110"/>
         <image name="dollarsign.arrow.circlepath" catalog="system" width="128" height="112"/>
         <image name="sun.min.fill" catalog="system" width="128" height="123"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
