--- a/LeBaluchon/View/Base.lproj/Main.storyboard
+++ b/LeBaluchon/View/Base.lproj/Main.storyboard
@@ -168,25 +168,27 @@
                                     <action selector="translateButton:" destination="LGh-By-4xj" eventType="touchUpInside" id="CqL-cz-P5X"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Entrez votre dans le premier carré traduction ci-dessous !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNi-lu-GAA">
-                                <rect key="frame" x="33" y="165" width="349" height="72"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entrez votre dans le premier carré traduction ci-dessous !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNi-lu-GAA">
+                                <rect key="frame" x="33" y="165" width="348" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="xaT-TO-aGC"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ae5-fZ-r69">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ae5-fZ-r69">
                                 <rect key="frame" x="87" y="267.66666666666663" width="240" height="360.66666666666663"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Wx5-i4-CdV">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="174"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="170.33333333333334"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Afd-xX-rsd">
-                                        <rect key="frame" x="0.0" y="194" width="240" height="166.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="190.33333333333331" width="240" height="170.33333333333331"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <color key="textColor" systemColor="labelColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -208,9 +210,12 @@
                             <constraint firstItem="ae5-fZ-r69" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="Kn5-h6-SlL"/>
                             <constraint firstItem="BLi-Cn-CAl" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="OqK-eP-WQU"/>
                             <constraint firstItem="ae5-fZ-r69" firstAttribute="centerY" secondItem="Y0I-Jp-XIo" secondAttribute="centerY" id="bUu-GI-non"/>
+                            <constraint firstItem="CNi-lu-GAA" firstAttribute="leading" secondItem="w9y-OP-dHP" secondAttribute="leading" constant="33" id="hKu-sr-607"/>
+                            <constraint firstItem="ae5-fZ-r69" firstAttribute="top" secondItem="CNi-lu-GAA" secondAttribute="bottom" constant="30.666666666666629" id="hNp-2l-zkO"/>
                             <constraint firstItem="xbO-Lt-PNy" firstAttribute="centerX" secondItem="Y0I-Jp-XIo" secondAttribute="centerX" id="vu1-Pg-2gX"/>
                             <constraint firstItem="BLi-Cn-CAl" firstAttribute="top" secondItem="w9y-OP-dHP" secondAttribute="top" constant="10" id="xVD-hW-cCf"/>
                             <constraint firstItem="w9y-OP-dHP" firstAttribute="bottom" secondItem="ae5-fZ-r69" secondAttribute="bottom" constant="184.66666666666674" id="ykC-VD-cbE"/>
+                            <constraint firstItem="CNi-lu-GAA" firstAttribute="centerX" secondItem="BLi-Cn-CAl" secondAttribute="centerX" id="zH0-eY-G64"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Traduction" id="Tyn-h2-l9c">
@@ -251,7 +256,7 @@
         <!--ChangeRate-->
         <scene sceneID="WbG-X1-bkh">
             <objects>
-                <viewController title="ChangeRate" id="ZGJ-xT-iUx" sceneMemberID="viewController">
+                <viewController title="ChangeRate" id="ZGJ-xT-iUx" customClass="ChangeRateController" customModule="LeBaluchon" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Ld-dN-RdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -264,13 +269,80 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aNZ-oQ-CJm">
+                                <rect key="frame" x="151.33333333333334" y="756.66666666666663" width="111.66666666666666" height="34.333333333333371"/>
+                                <color key="tintColor" systemColor="systemBlueColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="CONVERT !"/>
+                                <connections>
+                                    <action selector="tapButtonToGetChangeRate:" destination="ZGJ-xT-iUx" eventType="touchUpInside" id="HTW-44-bE8"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ylh-G7-RYO">
+                                <rect key="frame" x="10" y="303" width="394" height="290"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sJ6-Jj-s6p">
+                                        <rect key="frame" x="97" y="0.0" width="200" height="140"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EUROS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qAx-J6-Jl5">
+                                                <rect key="frame" x="51.333333333333336" y="0.0" width="97.333333333333314" height="70"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="0" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8mF-wb-tQq">
+                                                <rect key="frame" x="0.0" y="70" width="200" height="70"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="70" id="Yf1-4T-K3Z"/>
+                                                    <constraint firstAttribute="width" constant="200" id="yE8-dl-1Xt"/>
+                                                </constraints>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="buI-uH-Hia">
+                                        <rect key="frame" x="97" y="150" width="200" height="140"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DOLLARS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wbj-7D-xR4">
+                                                <rect key="frame" x="34.333333333333343" y="0.0" width="131.66666666666666" height="70"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="0" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v3l-r4-pwi">
+                                                <rect key="frame" x="0.0" y="70" width="200" height="70"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="200" id="RvU-5e-Jdo"/>
+                                                    <constraint firstAttribute="height" constant="70" id="pfB-FO-Bm1"/>
+                                                </constraints>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ehn-Yq-dr4"/>
                         <color key="backgroundColor" systemColor="systemRedColor"/>
                         <color key="tintColor" systemColor="systemYellowColor"/>
                         <constraints>
-                            <constraint firstItem="gfQ-pN-aPM" firstAttribute="centerX" secondItem="6Ld-dN-RdC" secondAttribute="centerX" id="T82-jc-6Sb"/>
-                            <constraint firstItem="gfQ-pN-aPM" firstAttribute="top" secondItem="ehn-Yq-dr4" secondAttribute="top" constant="10" id="zfQ-0P-lIh"/>
+                            <constraint firstItem="Ylh-G7-RYO" firstAttribute="centerX" secondItem="6Ld-dN-RdC" secondAttribute="centerX" id="4Mx-6Z-ZUe"/>
+                            <constraint firstItem="ehn-Yq-dr4" firstAttribute="bottom" secondItem="aNZ-oQ-CJm" secondAttribute="bottom" constant="22" id="M0s-ux-K51"/>
+                            <constraint firstItem="Ylh-G7-RYO" firstAttribute="centerY" secondItem="6Ld-dN-RdC" secondAttribute="centerY" id="Y1l-aO-hLL"/>
+                            <constraint firstItem="gfQ-pN-aPM" firstAttribute="top" secondItem="ehn-Yq-dr4" secondAttribute="top" constant="10" id="evt-5m-ut3"/>
+                            <constraint firstItem="ehn-Yq-dr4" firstAttribute="trailing" secondItem="Ylh-G7-RYO" secondAttribute="trailing" constant="10" id="fOO-WR-gfB"/>
+                            <constraint firstItem="gfQ-pN-aPM" firstAttribute="centerX" secondItem="6Ld-dN-RdC" secondAttribute="centerX" id="ksX-Kj-baF"/>
+                            <constraint firstItem="aNZ-oQ-CJm" firstAttribute="centerX" secondItem="6Ld-dN-RdC" secondAttribute="centerX" id="q9w-8z-lG3"/>
+                            <constraint firstItem="Ylh-G7-RYO" firstAttribute="leading" secondItem="ehn-Yq-dr4" secondAttribute="leading" constant="10" id="sem-oS-6kr"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Change Rate" id="PUn-WA-dKz">
@@ -278,10 +350,14 @@
                         <color key="badgeColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="amountConvertedCurrencyTextView" destination="v3l-r4-pwi" id="wy7-vL-isD"/>
+                        <outlet property="amountOfCurrencyTextView" destination="8mF-wb-tQq" id="88Y-km-MHf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uKe-Es-KOG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1259" y="6"/>
+            <point key="canvasLocation" x="1250.7246376811595" y="4.0178571428571423"/>
         </scene>
     </scenes>
     <resources>
@@ -293,6 +369,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
